--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ jar {
     from {
         configurations.provided.collect { it.isDirectory() ? it : zipTree(it) }
     }
+    exclude 'org/tensorflow/native/**'
 }
 
 // Example configuration to allow publishing using the maven-publish task
